--- a/week6/thursday/hollywood/templates/base.html
+++ b/week6/thursday/hollywood/templates/base.html
@@ -5,6 +5,8 @@
 <head>
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="{% static "js/main.js" %}"></script>
     {% block extrahead %}
     {% endblock %}
 </head>
