--- a/week6/thursday/hollywood/templates/movies/movies.html
+++ b/week6/thursday/hollywood/templates/movies/movies.html
@@ -9,4 +9,6 @@
     </ul>
     <br>
     <a href="{% url "new_movie" %}">Add new movie</a>
+    <div id="hello">Click me for hello</div>
+    <div id="give_me_more_information">Click me for more information</div>
 {% endblock %}
