--- a/week7/friday/tastypie_tutorial/lecture/templates/presentation.html
+++ b/week7/friday/tastypie_tutorial/lecture/templates/presentation.html
@@ -430,7 +430,7 @@ class StudentResource(ModelResource):
                             <li>Using the APIs you created, create a new StudentProject tied to the Student representing you in your database.</li>
                         </ol>
                         <br><br>
-                        <small>Lets demo Postman (an API tool) for POSTing a new Student to a Class</small>
+                        <small>Lets demo Postman (an API tool) for POSTing a new Class</small>
                     </section>
                 </section>
 
